argocd/apps/mosquitto/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mosquitto
  name: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
  replicas: 1
  serviceName: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0
        command:
        - /opt/scripts/startup.sh
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 1883
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 1883
          timeoutSeconds: 3
        ports:
        - containerPort: 1883
          name: broker
        securityContext:
         runAsUser: 1883
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: config
          mountPath: /mosquitto/config
        - name: passwd
          mountPath: /mosquitto/passwd
        - name: startup
          mountPath: /opt/scripts
        - name: storage
          mountPath: /mosquitto/storage
      volumes:
      - name: config
        configMap:
          name: config
      - name: passwd
        emptyDir: {}
      - name: startup
        configMap:
          name: startup
          defaultMode: 268
      - name: storage
        persistentVolumeClaim:
          claimName: mosquitto
