argocd/apps/mosquitto/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mosquitto
spec:
  parentRefs:
  - name: mosquitto
  rules:
  - backendRefs:
    - name: mosquitto
      port: 1883
